tests/unit_tests/sema/variable_redecl_conflict_01.cc
// RUN: %cxx -verify -fcheck %s

int x;

// expected-error@1 {{conflicting declaration of 'x'}}
double x;

int main() { return 0; }
